--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 								<p>Student project - 08/2020</p>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b>Programming | Art</b></p>
-								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch the gameplay</a>																																															
-								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch</a>																																															
+								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Play</a>
 								
 							</article>
 						</div>
@@ -73,8 +73,8 @@
 								<p>Brackeys Jam 2020.2 - 08/2020</p>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around! Watch <a href="https://youtu.be/OcjV2M3Y9Wg?t=310" target="_blank">Brackeys </a>playing our game.</p>
 								<p>Roles: <b>Game Design | Art</b></p>
-								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch the gameplay</a>																																															
-								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch</a>																																															
+								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -83,8 +83,8 @@
 								<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3>(PC, XBOX One and PS4)
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
 								<p>Role: <b>GUI artist | Integrator (internship)</b></p>			
-								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch the trailer</a>																																							
-								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch</a>																																							
+								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -95,8 +95,8 @@
 								<p>The Tenth Creative Games Jam - 02/2019</p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>
-								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch the gameplay</a>																															
-								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch</a>																															
+								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -106,8 +106,8 @@
 								<p><i>Personal project - 09/2019</i></p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>	
-								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch the gameplay</a>																							
-								<a href="https://nielisson.itch.io/tiny-elves" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch</a>																							
+								<a href="https://nielisson.itch.io/tiny-elves" class="button small scrolly" target="_blank">Play</a>
 								
 							</article>
 						</div>
@@ -119,7 +119,7 @@
 								<p>Student project - 12/2018</p>
 								<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>								
-								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch the gameplay</a>
+								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch</a>
 							</article>
 						</div>
 
@@ -130,8 +130,8 @@
 								<p>ArtBook and game prototype - 03/2019</p>
 								<p>A working dragon who caught a cold. What could go wrong?</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>	
-								<a href="https://www.behance.net/gallery/79393471/Wyvern-Circus-Artbook" class="button small scrolly" target="_blank">Check out the artbook</a>																							
-								<a href="https://nielisson.itch.io/wyvern-circus" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://www.behance.net/gallery/79393471/Wyvern-Circus-Artbook" class="button small scrolly" target="_blank">Artbook</a>																							
+								<a href="https://nielisson.itch.io/wyvern-circus" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 
@@ -142,8 +142,8 @@
 								<p>Personal project - 10/2019</p>
 								<p>When moving out is all about fun and balance!</p>
 								<p>Roles: <b>Game Design | Art </b></p>								
-								<a href="https://www.youtube.com/watch?v=jHvJbw-N3Ak&list=PL2HDE-lq9I_DfnDnGb0Zb0CouIHbHMrnO&index=4&t=0s" class="button small scrolly" target="_blank">Watch the gameplay</a>															
-								<a href="https://nielisson.itch.io/great-ocean-truck" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://www.youtube.com/watch?v=jHvJbw-N3Ak&list=PL2HDE-lq9I_DfnDnGb0Zb0CouIHbHMrnO&index=4&t=0s" class="button small scrolly" target="_blank">Watch</a>															
+								<a href="https://nielisson.itch.io/great-ocean-truck" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 
@@ -156,8 +156,8 @@
 								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
 									Our game was featured on <a href="https://youtu.be/XeV0bmTLacM?t=83" target="_blank">Brackeys' channel!</a></p>
 								<p>Roles: <b>Game Design | Art </b></p>	
-								<a href="https://youtu.be/GNpKn6mdovk" class="button small scrolly" target="_blank">Watch the gameplay</a>							
-								<a href="https://nielisson.itch.io/note-to-self" class="button small scrolly" target="_blank">Play the game</a>
+								<a href="https://youtu.be/GNpKn6mdovk" class="button small scrolly" target="_blank">Watch</a>							
+								<a href="https://nielisson.itch.io/note-to-self" class="button small scrolly" target="_blank">Play</a>
 							</article>
 						</div>
 
@@ -168,8 +168,8 @@
 									<p>Extra Credits Game Jam - 03/2019</p>
 									<p>Ferdinand was entrusted three special eggs and his mission is to deliver them to the White Temple in order to restore the balance of world.</p>
 									<p>Roles: <b>Game and Level Design | Art </b></p>	
-									<a href="https://youtu.be/TKyT1Yqcmc0" class="button small scrolly" target="_blank">Watch the gameplay</a>							
-									<a href="https://nielisson.itch.io/nobamboo" class="button small scrolly" target="_blank">Play the game</a>
+									<a href="https://youtu.be/TKyT1Yqcmc0" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://nielisson.itch.io/nobamboo" class="button small scrolly" target="_blank">Play</a>
 								</article>
 							</div>
 
@@ -181,8 +181,8 @@
 									<p>Global Game Jam 2019</p>
 									<p>The only survivor of his kind, Thierry L’hermite, undertakes a long adventure that may lead him to the remains of his ancestors.</p>
 									<p>Roles: <b>Game and Level Design</b></p>	
-									<a href="https://youtu.be/Pf1hFFAivgs" class="button small scrolly" target="_blank">Watch the gameplay</a>							
-									<a href="https://globalgamejam.org/2019/games/host-shell-0" class="button small scrolly" target="_blank">Play the game</a>
+									<a href="https://youtu.be/Pf1hFFAivgs" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://globalgamejam.org/2019/games/host-shell-0" class="button small scrolly" target="_blank">Play</a>
 								</article>
 							</div>
 
@@ -198,6 +198,17 @@
 								</article>
 							</div>
 
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://nielisson.itch.io/gardian-occitan" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/gardian.gif" alt="" /></a>
+									<h3><a href="https://nielisson.itch.io/gardian-occitan" target="_blank">Gardian occitan</a></h3> 
+									<p>Game Pratic' 2018 <b>(Game jam's winner)</b></p>
+									<p>In "Gardian occitan", you are invited to discover and to renovate French museums of the Occitan region.</p>
+									<p>Roles: <b>Game Design | UI</b></p>	
+									<a href="https://youtu.be/wdkjYFzfzGc" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://nielisson.itch.io/gardian-occitan" class="button small scrolly" target="_blank">Play</a>
+								</article>
+							</div>
 
 					</div>
 					<footer>
