--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 								<article class="box style2">
 									<a href="https://nielisson.itch.io/gardian-occitan" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/gardian.gif" alt="" /></a>
 									<h3><a href="https://nielisson.itch.io/gardian-occitan" target="_blank">Gardian occitan</a></h3> 
-									<p>Game Pratic' 2018 <b>(Game jam's winner)</b></p>
+									<p>Game Pratic' 2018 <br><b>(Game jam's winner)</b></p>
 									<p>In "Gardian occitan", you are invited to discover and to renovate French museums of the Occitan region.</p>
 									<p>Roles: <b>Game Design | UI</b></p>	
 									<a href="https://youtu.be/wdkjYFzfzGc" class="button small scrolly" target="_blank">Watch</a>							
