--- a/index.html
+++ b/index.html
@@ -261,8 +261,17 @@
 							</footer>
 						</div>
 					</article>
+		<!-- Blog -->
+		<article id="contact" class="wrapper style3">
+			<div class="container medium">
+				<header>
+					<h2>Blog</h2></header>
 
-
+					<iframe src="https://nielisson.blogspot.com/" name="frame1" scrolling="auto" frameborder="no" align="center" height = "600px" width = "800px">
+					
+					</iframe>
+				</div>
+				</article>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
