--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 				<header>
 					<h2>Blog</h2></header>
 
-					<iframe src="https://nielisson.blogspot.com/" name="frame1" scrolling="auto" frameborder="no" align="center" height = "600px" width = "800px">
+					<iframe src="http://nielisson.mystrikingly.com/#a-game-per-day" name="frame1" scrolling="auto" frameborder="no" align="center" height = "600px" width = "800px">
 					
 					</iframe>
 				</div>
