--- a/index.html
+++ b/index.html
@@ -267,8 +267,7 @@
 				<header>
 					<h2>Blog</h2></header>
 
-					<iframe src="http://nielisson.mystrikingly.com/#a-game-per-day" name="frame1" scrolling="auto" frameborder="no" align="center" height = "600px" width = "800px">
-					
+					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
 					</iframe>
 				</div>
 				</article>
