--- a/index.html
+++ b/index.html
@@ -210,6 +210,18 @@
 								</article>
 							</div>
 
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://nielisson.itch.io/pendulum" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/1cc4f777304729.5c844a637ae27.gif" alt="" /></a>
+									<h3><a href="https://nielisson.itch.io/pendulum" target="_blank">Pendulum</a></h3> 
+									<p>Extra Credits Holiday 2018</p>
+									<p>Pendulum is a steampunk-inspired 2D platformer. Our hero is striving to survive in this mysterious and hostile place that is full of traps, puzzles and enemies.</p>
+									<p>Roles: <b>Game Design | Art</b></p>	
+									<a href="https://youtu.be/WQEPTHOcTSo" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://nielisson.itch.io/pendulum" class="button small scrolly" target="_blank">Play</a>
+								</article>
+							</div>
+
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
