--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/note-to-self" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/note.png" alt="" /></a>
+								<a href="https://nielisson.itch.io/note-to-self" class="image featured" target="_blank"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/0e46fc77304729.5c840c0c0fd66.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self:</a></h3>
 								<p>Brackeys Game Jam - 02/2019</p>
 								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
