--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.gif" alt="Playback" /></a>
+								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback-gif.gif" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p>Brackeys Jam 2020.2 - 08/2020</p>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around! Watch <a href="https://youtu.be/OcjV2M3Y9Wg?t=310" target="_blank">Brackeys </a>playing our game.</p>
@@ -137,7 +137,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/great-ocean-truck" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/great.png" alt="" /></a>
+								<a href="https://nielisson.itch.io/great-ocean-truck" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/great-gif.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/great-ocean-truck" target="_blank">Great Ocean Truck</a></h3>
 								<p>Personal project - 10/2019</p>
 								<p>When moving out is all about fun and balance!</p>
