--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 			</article>
 
 		<!-- Other prototypes -->
-			<article id="other-prototypes" class="wrapper style3">
+			<article id="other-prototypes" class="wrapper style5">
 				<div class="container">
 					<header>
 						<h2>Other Prototypes</h2>
@@ -250,6 +250,9 @@
 								
 							</article>
 						</div>
+					</div>
+				</div>
+				</article>
 
 
 		<!-- Work -->
