--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
-								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
+								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/instantt.png" alt="Candy Tower" /></a>
+								<h3><a href="https://nielisson.itch.io/linstant-t-companion-app" target="_blank">Instant T</a></h3>
 								<p>Student project - 08/2020</p>
-								<p>This is our companion application for the board game L'instant T.</p>
+								<p>This is a board game that requires a companion application that I coded myself.</p>
 								<p>Roles: <b>Art | Game Design | Programming</b></p>
 								<a href="https://youtu.be/lcnv5tbs73Q" class="button small scrolly" target="_blank">Watch</a>																																															
 								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">Download app</a>
