--- a/index.html
+++ b/index.html
@@ -243,13 +243,28 @@
 								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/instantt.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/linstant-t-companion-app" target="_blank">Instant T</a></h3>
 								<p>Student project - 08/2020</p>
-								<p>This is a board game that requires a companion application that I coded myself.</p>
+								<p>This is a board game about a concept of time, the game requires a companion application that I coded myself. You may download it down below if you are curious!</p>
 								<p>Roles: <b>Art | Game Design | Programming</b></p>
 								<a href="https://youtu.be/lcnv5tbs73Q" class="button small scrolly" target="_blank">Watch</a>																																															
-								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">Download app</a>
+								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="button small scrolly" target="_blank">Download</a>
 								
 							</article>
 						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Candy Tower" /></a>
+								<h3><a href="https://nielisson.itch.io/les-sons-imaginaires" target="_blank">Les sons imaginaires</a></h3>
+								<p>Weekly Game Jam - Week 40 - 04/2018</p>
+								<p>This world shrunk many years ago, leading to an unexpected consequence: all of the world's sound disappeared somehow.</p>
+								<p>Roles: <b>Art | Game Design</b></p>
+								<a href="https://youtu.be/ioPcp6VagYI" class="button small scrolly" target="_blank">Watch</a>																																															
+								<a href="https://nielisson.itch.io/les-sons-imaginaires" class="button small scrolly" target="_blank">Play</a>
+								
+							</article>
+						</div>
+
+
 					</div>
 				</div>
 				</article>
