--- a/index.html
+++ b/index.html
@@ -264,6 +264,32 @@
 							</article>
 						</div>
 
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Candy Tower" /></a>
+								<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Drilling for Treasure</a></h3>
+								<p>Ludum Dare game jam 42 - 08/2018</p>
+								<p>As you drill your way down this unknown planet, you mine the precious minerals teeming from its core. But you’re not alone!</p>
+								<p>Roles: <b>Art | Game Design</b></p>
+								<a href="https://youtu.be/fdZ3NOz8Jj0" class="button small scrolly" target="_blank">Watch</a>																																															
+								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="button small scrolly" target="_blank">Play</a>
+								
+							</article>
+						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Candy Tower" /></a>
+								<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Do Unicorns Eat Carrots?</a></h3>
+								<p>Student project 2018</p>
+								<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
+								<p>Roles: <b>Art | Game Design</b></p>
+								<a href="https://drive.google.com/open?id=1b_sy5zXfR_hwL9PgKL04lgRcekMBazKO" class="button small scrolly" target="_blank">Read the</a>																																															
+
+								
+							</article>
+						</div>
+
 
 					</div>
 				</div>
