--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/avatarPic.png" alt="Nice to meet you!" /></span>
+							<span class="image fit"><img src="images/Profile_Photo/avatarPic.png" alt="Nice to meet you!" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -240,7 +240,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/instantt.png" alt="Candy Tower" /></a>
+								<a href="https://nielisson.itch.io/linstant-t-companion-app" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/instantt.png" alt="Instant T" /></a>
 								<h3><a href="https://nielisson.itch.io/linstant-t-companion-app" target="_blank">Instant T</a></h3>
 								<p>Student project - 08/2020</p>
 								<p>This is a board game about a concept of time, the game requires a companion application that I coded myself. You may download it down below if you are curious!</p>
@@ -253,7 +253,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Candy Tower" /></a>
+								<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="les-sons-imaginaires" /></a>
 								<h3><a href="https://nielisson.itch.io/les-sons-imaginaires" target="_blank">Les sons imaginaires</a></h3>
 								<p>Weekly Game Jam - Week 40 - 04/2018</p>
 								<p>This world shrunk many years ago, leading to an unexpected consequence: all of the world's sound disappeared somehow.</p>
@@ -266,7 +266,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Candy Tower" /></a>
+								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Drilling for Treasure" /></a>
 								<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Drilling for Treasure</a></h3>
 								<p>Ludum Dare game jam 42 - 08/2018</p>
 								<p>As you drill your way down this unknown planet, you mine the precious minerals teeming from its core. But you’re not alone!</p>
@@ -279,17 +279,27 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Candy Tower" /></a>
-								<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Do Unicorns Eat Carrots?</a></h3>
+								<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Do_Unicorns_Eat_Carrots_white.png" alt="Do Unicorns Eat Carrots?" /></a>
+								<h3><a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" target="_blank">Do Unicorns Eat Carrots?</a></h3>
 								<p>Student project 2018</p>
 								<p>Inspired by the Gender Unicorn infographics, we designed a board game that questions our understandings of gender and the stereotypes around this subject.</p>
 								<p>Roles: <b>Art | Game Design</b></p>
-								<a href="https://drive.google.com/open?id=1b_sy5zXfR_hwL9PgKL04lgRcekMBazKO" class="button small scrolly" target="_blank">Read the</a>																																															
-
-								
+								<a href="https://drive.google.com/file/d/1aIXIhbYMjXtmdGZMmBGve7b1EIPhu_PJ/view?usp=sharing" class="button small scrolly" target="_blank">Read the rule book</a>																																																
 							</article>
 						</div>
 
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://nielisson.itch.io/mooi" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/Mooi.png" alt="Mooi" /></a>
+								<h3><a href="https://nielisson.itch.io/mooi" target="_blank">Mooi</a></h3>
+								<p>Personal project - 05/2019</p>
+								<p>Mooi is a text-based adventure inspired by Bury Me My Love and the board game Unlock!</p>
+								<p>Roles: <b>Art | Narrative and Game Design</b></p>
+								<a href="https://www.youtube.com/watch?time_continue=201&v=Nzv5QnBSpis&feature=emb_logo" class="button small scrolly" target="_blank">Watch</a>	
+								<a href="https://nielisson.itch.io/mooi" class="button small scrolly" target="_blank">Play</a>																																																
+																																															
+							</article>
+						</div>
 
 					</div>
 				</div>
