--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="Drilling for Treasure" /></a>
+								<a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/drilling.png" alt="Drilling for Treasure" /></a>
 								<h3><a href="https://ldjam.com/events/ludum-dare/42/ld42-leggo" target="_blank">Drilling for Treasure</a></h3>
 								<p>Ludum Dare game jam 42 - 08/2018</p>
 								<p>As you drill your way down this unknown planet, you mine the precious minerals teeming from its core. But you’re not alone!</p>
@@ -320,7 +320,12 @@
 										<img src="images/icon_game.png" width="300" height="300" alt="">
 										
 										<h3>Game Design</h3>
-										<p>COLOCAR AQUI O LINK PARA TODOS OS GDDs criados !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+										<p>
+											&#8226;<a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing">My featured Game Design Documents</a><br>
+											&#8226;dsdsdss <br>
+											&#8226;sdkjhsjd
+										
+										</p>
 									</section>
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
