--- a/index.html
+++ b/index.html
@@ -323,7 +323,12 @@
 										<p>
 											&#8226;<a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing">My featured Game Design Documents</a><br>
 											&#8226;dsdsdss <br>
-											&#8226;sdkjhsjd
+											&#8226;sdkjhsjd<br>
+											<ul>
+												<li>Coffee</li>
+												<li>Tea</li>
+												<li>Milk</li>
+											  </ul> 
 										
 										</p>
 									</section>
