--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 								<h2>Main Skills</h2>
 								<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 							</header>
-							<div class="row aln-center">
+							<div class="row aln-left">
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box style1">
 										<!-- <span class="icon featured fa-comments"></span>//-->
@@ -321,11 +321,8 @@
 										
 										<h3>Game Design</h3>
 										<p>
-											&#8226;<a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing">My featured Game Design Documents</a><br>
-											&#8226;dsdsdss <br>
-											&#8226;sdkjhsjd<br>
 											<ul>
-												<li>Coffee</li>
+												<li><a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing">My featured Game Design Documents</a></li>
 												<li>Tea</li>
 												<li>Milk</li>
 											  </ul> 
