--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
 
 		<!-- Work -->
-					<article id="work" class="wrapper style2">
+					<article id="work" class="wrapper">
 						<div class="container">
 							<header>
 								<h2>Main Skills</h2>
