--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
 										<img src="images/icon_game.png" width="300" height="300" alt="">
 										
 										<h3>Game Design</h3>
-									
+									<p>Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools I need to create
+									coherent and meaningful design for different genres of games. I am very fond of the "coziness" concept and the procedural rhetoric which
+									I studied in depth in my master's degree.
+									</p>
 											<ul>
 												<li>My featured<a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing">Game Design Documents</a></li>
 												<li>Tea</li>
