--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 										
 										<h3>Game Design</h3>
 									<br>
-									<p>Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools I need to create
+									<p align="left">Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools I need to create
 									coherent and meaningful design for different genres of games. I am very fond of the "coziness" concept and the procedural rhetoric which
 									I studied in depth in my master's degree.
 									</p>
