--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
 									</p>
 											<ul>
 												<li>My featured <a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing">Game Design Documents</a></li>
-												<li>Tea</li>
-												<li>Milk</li>
+												<li>Article: <a href="https://www.gamasutra.com/blogs/NielissonMendonca/20190410/340456/Game_Jam_Survival_Kit.php">Game Jam Survival Kit</a></li>
+												<li>Article: <a href="https://www.academia.edu/44227825/Arts_plastique_et_r%C3%A9alit%C3%A9_virtuelle_vers_une_nouvelle_forme_de_mus%C3%A9e?source=swp_share">Fine Arts and VR</a> (in French)</li>
 											  </ul> 
 										
 									
