--- a/index.html
+++ b/index.html
@@ -340,7 +340,10 @@
 										<img src="images/icon_unity.png" width="300" height="300" alt="">
 										
 										<h3>Unity</h3>
-										<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+										<p>Most of my games were made on Unity, so I am quite capable on this software. Besides the standard functionalities, 
+										I am also familiar with Pro Builder, Tilemap system, 
+										Post Processing and the particle system. Futhermore, I have learned how to code in C#, which allows me to assist the programmer. That also 
+										provided me the vocabulary and the clarity needed to communicate my ideas to the team.</p>
 									</section>
 								</div>
 								<div class="col-4 col-6-medium col-12-small">
@@ -350,11 +353,18 @@
 										
 										<h3>Art</h3>
 										<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+										<ul>
+											<li><a href="https://www.behance.net/nielisson">Illustrations</a></li>
+											<li><a href="https://www.behance.net/gallery/77308707/Photography">Photography</a></li>
+											<li>Article: <a href="https://www.academia.edu/44227825/Arts_plastique_et_r%C3%A9alit%C3%A9_virtuelle_vers_une_nouvelle_forme_de_mus%C3%A9e?source=swp_share">Fine Arts and VR</a> (in French)</li>
+										  </ul> 
+
+
 									</section>
 								</div>
 							</div>
 							<footer>
-								<p>Besides these skills, I am also familiar with the agile development methodology.</p>
+								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile</a></p>
 								<a href="#portfolio" class="button large scrolly">Check out work</a>
 							</footer>
 						</div>
