--- a/index.html
+++ b/index.html
@@ -364,8 +364,9 @@
 								</div>
 							</div>
 							<footer>
-								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile</a></p>
-								<a href="#portfolio" class="button large scrolly">Check out work</a>
+								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
+									please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile.</a></p>
+								<a href="#portfolio" class="button large scrolly">Check out my work</a>
 							</footer>
 						</div>
 					</article>
