--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="container">
 					<header>
 						<h2>Portfolio</h2>
-						<p>These are my favorite projects, some of them are from game jams.</p>
+						<p>These are my favorite projects, some of them are from game jams, personal or student projects.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -253,7 +253,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons.gif" alt="les-sons-imaginaires" /></a>
+								<a href="https://nielisson.itch.io/les-sons-imaginaires" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lessons2.png" alt="les-sons-imaginaires" /></a>
 								<h3><a href="https://nielisson.itch.io/les-sons-imaginaires" target="_blank">Les sons imaginaires</a></h3>
 								<p>Weekly Game Jam - Week 40 - 04/2018</p>
 								<p>This world shrunk many years ago, leading to an unexpected consequence: all of the world's sound disappeared somehow.</p>
