--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Home</a></li>
-					<li><a href="#work">Work</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -307,7 +308,7 @@
 
 
 		<!-- SKILLS  -->
-					<article id="work" class="wrapper style2">
+					<article id="skills" class="wrapper style2">
 						<div class="container">
 							<header>
 								<h2>Main Skills</h2>
@@ -372,7 +373,7 @@
 						</div>
 					</article>
 		<!-- Blog -->
-		<article id="contact" class="wrapper style3">
+		<article id="blog" class="wrapper style3">
 			<div class="container medium">
 				<header>
 					<h2>Blog</h2></header>
