--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
 										
 										<h3>Game Design</h3>
 									<br>
-									<p align="justify">Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools I need to create
-									coherent and meaningful design for different genres of games. I am very fond of the "coziness" concept and the procedural rhetoric which
-									I studied in depth in my master's degree.
+									<p align="justify">Having completed a master's degree in Fine Arts with a specialization in Game Design, I have acquired all the tools 
+									needed to create a coherent and meaningful design for different genres of games. I am very fond of the "coziness" concept and the 
+									procedural rhetoric which I have studied in depth throughout my academic years.
 									</p>
 											<ul>
 												<li>Featured <a href="https://drive.google.com/drive/folders/1RmHnHbjNSsp3rljKPrYbHkWOcq22fhLi?usp=sharing" target="_blank">Game Design Documents</a></li>
