--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Do you have any question?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -368,7 +368,6 @@
 							<footer>
 								<p>Besides these skills, I am also familiar with the agile development methodology. If you want to learn more about me, 
 									please check my <a href="https://www.upwork.com/o/profiles/users/_~01173b6fb6278d87ca/">Upwork profile.</a></p>
-								<a href="#portfolio" class="button large scrolly">Check out my work</a>
 							</footer>
 						</div>
 					</article>
@@ -377,9 +376,11 @@
 			<div class="container medium">
 				<header>
 					<h2>Blog</h2></header>
-
+<!--
 					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
 					</iframe>
+-->
+					<div class="powr-tumblr-feed" id="e6ce5ce8_1602106431"></div><script src="https://www.powr.io/powr.js?platform=embed"></script>
 				</div>
 				</article>
 
