--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
-				<div class="container medium">
+				<div class="container">
 					<header>
 						<h2>Contact</h2>
 						<p>Leave me a note</p>
@@ -397,12 +397,12 @@
 
 					<label>
 						<p align="left"> <font color="white">Your name </font>
-						<input type="text" name="name"> </p>
+						<input type="text" name="name" placeholder="Name"> </p>
 					</label>
 
 					<label>
 						<p align="left"> <font color="white">Your email: </font>
-					  <input type="text" name="_replyto"></p>
+					  <input type="text" name="_replyto" placeholder="Email"></p>
 					</label>
 
 					<label>
