--- a/index.html
+++ b/index.html
@@ -373,12 +373,13 @@
 					</article>
 		<!-- Blog -->
 		<article id="blog" class="wrapper style3">
-			<div class="container medium">
+			<div class="container">
 				<header>
 					<h2>Blog</h2></header>
+					<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
 
 					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
-				<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
+				
 				</div>
 				</article>
 
