--- a/index.html
+++ b/index.html
@@ -379,7 +379,9 @@
 					<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
 
 					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
-				
+					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
+					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
+
 				</div>
 				</article>
 
