--- a/index.html
+++ b/index.html
@@ -376,10 +376,11 @@
 			<div class="container">
 				<header>
 					<h2>Blog</h2></header>
-					<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
-
-					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631174024817524736" data-did="444403bcd2f7b187b5689405137b90eb6a2e10c7"><a href="https://nielisson.tumblr.com/post/631174024817524736/hhj">https://nielisson.tumblr.com/post/631174024817524736/hhj</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>					
-					<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
+				<p align="center">In this blog, I mostly playtest indie games and give my first impressions about them.
+					
+				<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
+				</p>
+				<p>Read more on my <a href="https://nielisson.tumblr.com">Tumblr</a>.</p>
 				</div>
 				</article>
 
