--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 					</article>
 		<!-- Blog -->
 		<article id="blog" class="wrapper style3">
-			<div class="container">
+			<div class="container col-6-medium">
 				<header>
 					<h2>Blog</h2></header>
 				<p align="center">In this blog, I mostly playtest indie games and give my first impressions about them.
