--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 		<article id="blog" class="wrapper style3">
 			<div class="container">
 				<div class="row">
-					<div class="col-4 col-5-large col-12-medium">
+					<div class="col aln-center">
 				<header>
 					<h2>Blog</h2></header>
 				<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
