--- a/index.html
+++ b/index.html
@@ -377,10 +377,12 @@
 				<header><h2>Blog</h2></header>
 				<div class="row aln-center">
 
-				<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p><br><br>
+				<p>In this blog, I mostly playtest indie games and give my first impressions about them.</p>
+				<br><br>
 					
 				<div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/8IWEwcU1LFNkiJ3vdx_HXw/631358971063779328" data-did="b6e2dfb106e557e99d6f5b733271c1dd2dce277d"><a href="https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free">https://nielisson.tumblr.com/post/631358971063779328/id-like-to-describe-this-as-a-cozy-stress-free</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
-
+				<br><br>
+				
 				<p>Read more on my <a href="https://nielisson.tumblr.com">Tumblr</a>.</p>
 				</div>
 			</div>
