--- a/index.html
+++ b/index.html
@@ -388,6 +388,15 @@
 			</div>
 				</article>
 
+				<article id="blog" class="wrapper style3">
+					<div class="container">
+				<div class="powr-tumblr-feed" id="e6ce5ce8_1602106431"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+				
+				</div>
+
+			</div>
+		</article>
+
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container">
